fix: Add line wrap to social links to display correctly on smaller displays

--- a/index.css
+++ b/index.css
@@ -135,6 +135,7 @@ header {
 .social {
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
   padding-top: 1rem;
   margin-left: -.8rem;
 }
